[tool.poetry]
name = "gaphor-export-all-diagrams"
version = "0.1.0"
description = "A plugin for Gaphor to mass export all diagrams"
authors = ["Frank Vanbever <frank.vanbever@mind.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
