[tool.poetry]
name = "gaphor-export-all-diagrams"
version = "0.1.0"
description = "A plugin for Gaphor to mass export all diagrams"
authors = ["Frank Vanbever <frank.vanbever@mind.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
# Gaphor should be a dev-dependency, so it's not installed as part of the plugin
gaphor = "^2.23"
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."gaphor.services"]
"export-all-diagrams" = "gaphor_export_all_diagrams:ExportAllPlugin"